File diectory change

--- a/client/src/components/login.css
+++ b/client/src/components/login.css
@@ -1,5 +1,5 @@
 .registration-container {
-  background-image: url(../images/B_G1.jpg);
+  background-image: url(../assets/B_G1.jpg);
   background-size: cover;
   background-position: center;
   display: flex;
